--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,21 +2,15 @@
 
 
 body{
-    display:flex;
-    flex-direction: column;
-    background-color: black;
+  
     
 
     font-family:Arial, Helvetica, sans-serif;
 
   /* margin:480px; */
-    margin-top: 0px;
-    margin-bottom: 0px;
-   margin-left:480px;
-   margin-right: 480px;
+   margin:0;
 
 
-    flex:1;
 
     min-height: 100vh;
     min-width: 100vh;
@@ -33,26 +27,20 @@ body{
 .container{
     display:flex;
     flex-direction: column;
-    flex:1;
 }
 
 
-img{
-   /* max-height:auto;
-    max-width: 400px; */
 
-}   
 
 .darkGray{
-   display:inline-flex; 
     background-color:#1F2937 ;
     color:white;
+   
+   display:flex;
     flex-direction: column;
-    flex:1;
-
-    
     justify-content: center;
-
+    align-content: center;
+ 
     margin:0px;
 /*
     width:50%;
@@ -72,8 +60,8 @@ img{
 
    /* padding-left:150px;
     padding-right:150px; */
-    padding-left:20rem;
-    padding-right: 20rem;
+    padding-left:50rem;
+    padding-right: 50rem;
     padding-bottom: 5rem;
    
 }
@@ -86,20 +74,20 @@ flex:1;
 
 
    /* width:58%;*/
+   padding: 3rem 0 4rem 0;
 
-   
 }
 .wrapWhite{
     display:flex;
     flex-direction: column;
     align-self: center;
-    justify-content: center;
- 
-
-    align-self: center;
-    justify-content: center;
 }
-h2{text-align: center;}
+h2{
+    text-align: center;
+    font-size:xx-large;
+    margin:0rem 0 3rem 0;
+
+}
 .card{
     display:flex;
     flex-direction: column;
@@ -110,7 +98,6 @@ h2{text-align: center;}
 }
 .subtext{
 display:flex;
-flex-direction:column;
 text-align: center;
 width:150px;
 
@@ -124,7 +111,6 @@ width:150px;
     height: 150px;;
     border-radius: 10px;
     justify-content: center;
-    align-content: center;
 }
 
 
@@ -132,15 +118,8 @@ width:150px;
     display:flex;
     justify-content: space-between;
     align-items:center;
-    margin:0px;
-
-    flex:1;
-
 }
-ul{
-    list-style: none;
-    margin:22px;
-}
+
 
 button{
 
@@ -152,7 +131,6 @@ button{
     font-size: larger;
     padding: 10px 30px 10px 30px;
     border:0px;
-    text-align: center;
 
 
 
@@ -175,9 +153,7 @@ button{
  
 
     flex-direction:column;
-    flex-wrap:wrap;
-
-
+    height:10rem;
     flex:1;
 
     padding:0;
@@ -200,6 +176,7 @@ button{
 #headerSub{
     display:flex;
     width:380px;
+    height: 100px;;
     font-size: 18px;
     margin: 5px 0px 10px 0px;
 
@@ -214,7 +191,6 @@ button{
     justify-content: start;
       width:50%;
     */
-
   
 }
 
@@ -257,7 +233,8 @@ a{
     font-size: 36px;
 
 
-    
+    padding-left:50rem;
+    padding-right: 50rem;
 
 
   /*  padding-left:12%;
@@ -272,14 +249,16 @@ a{
     
 }
 .whiteBottom{
-    padding:8%;
-
+    padding-left:50rem;
+    padding-right: 50rem;
     background-color:rgb(248, 248, 248) ;
 
 }
 
 .blueInside{
     background-color: #3882F6;
+    border-radius: 10px;
+        
 }
 
 .signUp{
