Align all content

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,8 +12,7 @@ body{
 
 
 
-    min-height: 100vh;
-    min-width: 100vh;
+  
 
 
    /* padding-left:12%;
@@ -27,6 +26,9 @@ body{
 .container{
     display:flex;
     flex-direction: column;
+    flex:0;
+
+  
 }
 
 
@@ -38,9 +40,12 @@ body{
    
    display:flex;
     flex-direction: column;
-    justify-content: center;
     align-content: center;
  
+    flex-grow:0;
+    flex-shrink:0;
+    flex-basis: content;
+
     margin:0px;
 /*
     width:50%;
@@ -60,11 +65,88 @@ body{
 
    /* padding-left:150px;
     padding-right:150px; */
-    padding-left:50rem;
-    padding-right: 50rem;
+    padding-left:52rem;
+    padding-right: 52rem;
     padding-bottom: 5rem;
    
+
+    max-width: 100vw;
 }
+.headerContainer{
+   display:flex;
+   justify-content: center;
+}
+.header{
+    display:flex;
+    align-items:center;
+    align-content: center;
+    justify-content: space-between;
+    /*width:50rem;*/
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis:content;
+  
+}
+#headerLogo
+{
+    font-size: 24px;
+    color:#F9FAF8;
+    margin-top:22px;
+    margin-right: 340px;
+
+}
+.links{
+justify-self:right;
+   
+}
+
+
+.topContentLeft{
+    display:flex;
+ 
+
+    flex-direction:column;
+    height:10rem;
+    flex:0;
+
+    padding:0;
+    
+    /*
+    width:500px;
+    justify-content: center;
+    align-content: center;
+    */
+}
+
+
+.topContentBoth{
+    display:flex;
+   align-content: center;
+   justify-content: center;
+    flex:1;
+
+}
+
+
+
+#heroSub{
+    display:flex;
+    width:380px;
+    height: 100px;;
+    font-size: 18px;
+    margin: 5px 0px 10px 0px;
+
+    flex:1;
+
+}
+
+
+
+
+
+
+
+
 .white{
     background-color:#F9FAF8;
 
@@ -114,11 +196,6 @@ width:150px;
 }
 
 
-.header{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-}
 
 
 button{
@@ -138,51 +215,24 @@ button{
 #clearButton{
     background-color: none;
     color:white;
+
     font-weight: bold;
+    border:3px white;
     border-style: solid;
     border-radius: 10px;
-    border-color:white;
     font-size: larger;
     padding: 10px 30px 10px 30px;
-    border:0px;
     text-align: center;
-}
 
-.topContentLeft{
-    display:inline-flex;
- 
+height:fit-content;
+display:flex;
 
-    flex-direction:column;
-    height:10rem;
-    flex:1;
+align-self: center;
 
-    padding:0;
-    
-    /*
-    width:500px;
-    justify-content: center;
-    align-content: center;
-    */
+
 }
 
 
-.topContentBoth{
-    display:flex;
-   align-content: center;
-    flex:1;
-
-}
-
-#headerSub{
-    display:flex;
-    width:380px;
-    height: 100px;;
-    font-size: 18px;
-    margin: 5px 0px 10px 0px;
-
-    flex:1;
-
-}
 
 
 
@@ -191,7 +241,6 @@ button{
     justify-content: start;
       width:50%;
     */
-  
 }
 
 #hero{
@@ -201,13 +250,7 @@ button{
     width:380px;
 }
 
-#headerLogo
-{
-    font-size: 24px;
-    color:#F9FAF8;
-    text-align: left;
-    margin-top:22px;
-}
+
 
 .links{
     display:flex;
@@ -225,41 +268,88 @@ a{
 }
 
 .gray{
-    display:flex;
+    display:inline-flex;
     flex-direction: column;
-    background-color: #E5E7EB;
+    flex:1;
+    
+    
+       /* width:58%;*/
+    
 
-    font-style: italic;
+    font-style:italic;
     font-size: 36px;
+    background-color: rgb(219, 219, 219);
 
 
-    padding-left:50rem;
-    padding-right: 50rem;
+    padding: 3rem 55rem 4rem 55rem;
+
 
 
   /*  padding-left:12%;
     padding-right:12%;
     padding-bottom: 8%; */
+
+
+        flex: 0 0 25rem;
+    align-content: center;
+    justify-content: center;
+
 }
 #quote{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    
+    width:700px;
+    align-self: center;
 }
+#Thor{
+    text-align:right;
+    padding-right:2rem;
+    margin-top: 0px;
+}
+#inspire{
+   
+}
+
 .whiteBottom{
-    padding-left:50rem;
-    padding-right: 50rem;
+  
+    padding: 3rem 52rem 3rem 52rem;
     background-color:rgb(248, 248, 248) ;
+    display:flex;
+    justify-content: center;
 
 }
 
 .blueInside{
+    color:white;
     background-color: #3882F6;
     border-radius: 10px;
-        
+    width: 100%;
+
+    display:flex;
+    justify-content: space-around;
+    align-self:center;
+
+    flex:0 0 900px;
 }
 
-.signUp{
+#signUp{
+    margin-top:0px;
+    margin-bottom: 55px;
+}
+#call{
+    margin-top: 55px;
+    margin-bottom:0;
+    font-weight: bold;
+    font-size: x-large;
+}
+
+.blueLeft{
+    display:flex;
+    flex-direction: column;
+
+}
+
+.footer{
+    text-align: center;
+    background-color: #1F2937  ;
+    color: rgb(238, 238, 238);
+    padding:2vh 0 2vh 0;
 }
